--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -156,7 +156,7 @@ jobs:
         run: |
           PKG="${{ matrix.pkg }}"
           mkdir -p /tmp/logs/times/rstudio-binary/
-          (time bash .github/scripts/build_package.sh ${{ steps.versions.outputs.library }} $PKG $(cat runstarttime) ) 2>&1 | tee /tmp/logs/times/rstudio-binary/$PKG
+          bash .github/scripts/build_package.sh ${{ steps.versions.outputs.library }} $PKG $(cat runstarttime)
         continue-on-error: true
         shell: bash
 
