--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -27,7 +27,7 @@ jobs:
         uses: nick-fields/retry@v2
         with:
           timeout_minutes: 10
-          max_attempts: 50
+          max_attempts: 20
           shell: bash
           command: |
             set -x
@@ -200,15 +200,17 @@ jobs:
           name: "artifact-${{ matrix.pkg }}"
           path: ${{steps.tar.outputs.name}}
 
-      - name: Install rclone
-        shell: bash
-        run: "sudo -v ; curl https://rclone.org/install.sh | sudo bash"
-
-      - name: Add rclone conf file
-        run: |
-          echo "$RCLONE_CONF" > ~/.rclone.conf
+      - name: Install rclone & add rclone conf file
+        uses: nick-fields/retry@v2
         env:
-          RCLONE_CONF: ${{secrets.RCLONE_CONF}}
+            RCLONE_CONF: ${{secrets.RCLONE_CONF}}
+        with:
+          timeout_minutes: 20
+          max_attempts: 3
+          shell: bash
+          command: |
+            sudo -v ; curl https://rclone.org/install.sh | sudo bash
+            echo "$RCLONE_CONF" > ~/.rclone.conf
 
       - name: Save size and time
         run: |
