Add inventory and finish

--- a/.github/scripts/ansible/ansible-packages.yaml
+++ b/.github/scripts/ansible/ansible-packages.yaml
@@ -58,4 +58,6 @@
       executable: /bin/bash
     shell: |
       cd /home/ubuntu/gha-build
-      rclone copyto js2:/gha-build/rstudio-binaries/$(cat runstarttime)/{} /tmp/binaries/{} -vvvvv
+      rclone copyto /tmp/binaries/PACKAGES js2:/gha-build/rstudio-binaries/$(cat runstarttime)/PACKAGES -vvvvv
+      rclone copyto /tmp/binaries/PACKAGES js2:/gha-build/rstudio-binaries/$(cat runstarttime)/PACKAGES.gz -vvvvv
+      rclone copyto /tmp/binaries/PACKAGES js2:/gha-build/rstudio-binaries/$(cat runstarttime)/PACKAGES.rds -vvvvv
