--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -1,7 +1,9 @@
 name: Build packages matrix
 on:
   workflow_dispatch: {}
-  push: {}
+  push:
+    paths:
+      - tobuild.txt
   schedule:
     - cron: '*/30 * * * *'
 
@@ -15,7 +17,6 @@ jobs:
       matrix: ${{ steps.matrix.outputs.pkglist }}
     steps:
       - uses: actions/checkout@v3
-
 
       - name: Get timestamp for list
         id: uniq
@@ -39,13 +40,11 @@ jobs:
       - name: Output list of up to 90 packages to build
         id: matrix
         run: |
-          # Exit if tobuild list is empty
-          if [ ! -s tobuild.txt ]; then exit 1; fi
           mkdir -p /tmp
           head -n90 tobuild.txt > /tmp/pkglist
           # Output it as json parsable list "['pkg1', 'pkg2']"
           echo pkglist=$(echo "['$(cat /tmp/pkglist |  paste -d, -s | sed s/,/\',\'/g)']") >> $GITHUB_OUTPUT
-          # Remove first 90 liunes from to build
+          # Remove first 90 lines from to build
           sed '1,90d' tobuild.txt > /tmp/newtobuild
 
       - name: Set token depending on whether a new workflow is needed
@@ -53,7 +52,7 @@ jobs:
         run: |
           # PAT will trigger a push workflow, GITHUB_TOKEN won't
           # Trigger a new workflow if tobuild is not empty
-          if [ -s tobuild.txt ]; then TOK=${{secrets.PAT}}; else TOK=${{secrets.GITHUB_TOKEN}}; fi
+          if [ -s /tmp/newtobuild ]; then TOK=${{secrets.PAT}}; else if [ -s /tmp/write_PACKAGES ]; then TOK=${{secrets.PAT}}; else TOK=${{secrets.GITHUB_TOKEN}}; fi
           echo tok=$(echo "$TOK") >> $GITHUB_OUTPUT
 
       - name: Checkout with new token
@@ -61,6 +60,30 @@ jobs:
         with:
           token: ${{ steps.tokenlist.outputs.tok }}
           persist-credentials: true
+
+
+      - name: Add write_packages log
+        uses: nick-fields/retry@v2
+        with:
+          timeout_minutes: 10
+          max_attempts: 50
+          shell: bash
+          command: |
+            if [ ! -s /tmp/write_PACKAGES ]; then exit 0; fi
+            set -x
+            git config --global --add safe.directory "$GITHUB_WORKSPACE"
+            git pull origin main || git reset --hard origin/main
+            cp /tmp/write_PACKAGES logs/write_PACKAGES
+            git config user.name github-actions
+            git config user.email github-actions@github.com
+            git add logs
+            git commit -m "Updating write_packages to trigger"
+            git push
+
+      - name: Exit if list is empty
+        run: |
+          # Exit if this run's package dispatch list is empty
+          if [ ! -s /tmp/pkglist ]; then exit 1; fi
 
       - name: Update list
         uses: nick-fields/retry@v2
@@ -145,6 +168,9 @@ jobs:
 
       - name: Collect Workflow Telemetry
         uses: runforesight/workflow-telemetry-action@v1
+        with:
+          theme: dark
+          comment_on_pr: false
 
       - name: Get dependency artifacts 
         run: |
@@ -219,10 +245,11 @@ jobs:
 
       - name: Save size and time
         run: |
+          PKG="${{ matrix.pkg }}"
           mkdir -p /tmp/logs/sizes/rstudio-binaries/libraries
           mkdir -p /tmp/logs/sizes/rstudio-binaries/binaries
-          wc -c "${{steps.tar.outputs.name}}" > /tmp/logs/sizes/rstudio-binaries/libraries/${{ matrix.pkg }}
-          wc -c "/tmp/tars/${{steps.tar.outputs.pkg}}" > /tmp/logs/sizes/rstudio-binaries/binaries/${{ matrix.pkg }}
+          wc -c "${{steps.tar.outputs.name}}" > /tmp/logs/sizes/rstudio-binaries/libraries/$PKG
+          wc -c "/tmp/tars/${{steps.tar.outputs.pkg}}" > /tmp/logs/sizes/rstudio-binaries/binaries/$PKG
 
       - name: Rclone push package
         uses: nick-fields/retry@v2
@@ -236,6 +263,15 @@ jobs:
             rclone copy /tmp/tars/${{steps.tar.outputs.pkg}} js2:/gha-build/rstudio-binaries/$(cat runstarttime)/ -vvvvvv
             # Push copy of library
             rclone copy ${{steps.tar.outputs.name}} js2:/gha-build/running/$(cat runstarttime)/ -vvvvvv
+
+      - name: Add info to summary
+        run: |
+          PKG="${{ matrix.pkg }}"
+          echo "# $PKG Build summary" >> $GITHUB_STEP_SUMMARY
+          echo "RStudio package binary: [Jetstream2](https://js2.jetstream-cloud.org:8001/swift/v1/gha-build/rstudio-binaries/$(cat runstarttime)/${{steps.tar.outputs.pkg}})" >> $GITHUB_STEP_SUMMARY
+          echo "Size of package binary: $(cat /tmp/logs/sizes/rstudio-binaries/binaries/$PKG)" >> $GITHUB_STEP_SUMMARY
+          echo "Size of package and dependencies: $(cat /tmp/logs/sizes/rstudio-binaries/libraries/$PKG)" >> $GITHUB_STEP_SUMMARY
+          echo "Build time: $(cat /tmp/logs/times/rstudio-binary/$PKG)" >> $GITHUB_STEP_SUMMARY
 
       - name: Rclone mark as pushed
         uses: nick-fields/retry@v2
