--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -52,7 +52,7 @@ jobs:
         run: |
           # PAT will trigger a push workflow, GITHUB_TOKEN won't
           # Trigger a new workflow if tobuild is not empty
-          if [ -s /tmp/newtobuild ]; then TOK=${{secrets.PAT}}; else if [ -s /tmp/write_PACKAGES ]; then TOK=${{secrets.PAT}}; else TOK=${{secrets.GITHUB_TOKEN}}; fi
+          if [ -s /tmp/newtobuild ]; then TOK=${{secrets.PAT}}; elif [ -s /tmp/write_PACKAGES ]; then TOK=${{secrets.PAT}}; else TOK=${{secrets.GITHUB_TOKEN}}; fi
           echo tok=$(echo "$TOK") >> $GITHUB_OUTPUT
 
       - name: Checkout with new token
