--- a/.github/scripts/ansible/ansible-packages.yaml
+++ b/.github/scripts/ansible/ansible-packages.yaml
@@ -4,6 +4,18 @@
   become: true
   become_user: ubuntu
   tasks:
+  - name: Update APT cache
+    apt:
+      update_cache: yes
+      cache_valid_time: 3600
+      autoremove: yes
+      autoclean: yes
+    retries: 50
+    delay: 10
+    become: yes
+    register: apt_action
+    until: apt_action is success or ('Failed to lock apt for exclusive operation' not in apt_action.msg and '/var/lib/dpkg/lock' not in apt_action.msg)
+
   - name: Reboot machine for updates to apply (otherwise will reboot itself)
     ansible.builtin.reboot:
 
