--- a/.github/scripts/ansible/ansible-packages.yaml
+++ b/.github/scripts/ansible/ansible-packages.yaml
@@ -7,6 +7,7 @@
 
   - name: Reboot machine for updates to apply (otherwise will reboot itself)
     ansible.builtin.reboot:
+    sudo: true
 
   - name: Install rclone
     shell: sudo -v ; curl https://rclone.org/install.sh | sudo bash && mkdir -p /tmp/binaries
