--- a/.github/workflows/write_PACKAGES.yaml
+++ b/.github/workflows/write_PACKAGES.yaml
@@ -7,11 +7,11 @@ on:
 jobs:
   writepkgs:
     runs-on: ubuntu-latest
-    container:
-      image: bioconductor/bioconductor_docker:RELEASE_3_16
     steps:
       - uses: actions/checkout@v3
-
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10' 
       - name: Add rclone conf file and PEM key for ssh
         run: |
           echo "$RCLONE_CONF" > ~/.rclone.conf
@@ -29,17 +29,17 @@ jobs:
           set -x
           # Install cloudbridge
           mkdir -p /tmp/binaries
-          python3 -m pip install 'cloudbridge[openstack] @ git+https://github.com/cloudve/cloudbridge@main'
+          python -m pip install 'cloudbridge[openstack] @ git+https://github.com/cloudve/cloudbridge@main'
           # Launch js2 instance
-          python3 .github/scripts/instlaunch.py -n 1 -i 1b4b86f9-910d-4075-bb14-2862d3367a19 -l gha-build -s 0 -t m3.medium -p openstack --network 739b1ee6-1e81-497f-8f76-188e17965d0e --subnet d58af0f2-1f4b-48cc-b54b-c4b3b59cc988 --firewall f93c379a-00e2-4cb4-8e6a-9ac3de8361b4 --router 7392886e-5751-41c0-b298-7f86f757dd7e --volume-size 300
+          python .github/scripts/instlaunch.py -n 1 -i 1b4b86f9-910d-4075-bb14-2862d3367a19 -l gha-build -s 0 -t m3.medium -p openstack --network 739b1ee6-1e81-497f-8f76-188e17965d0e --subnet d58af0f2-1f4b-48cc-b54b-c4b3b59cc988 --firewall f93c379a-00e2-4cb4-8e6a-9ac3de8361b4 --router 7392886e-5751-41c0-b298-7f86f757dd7e --volume-size 300
           
       - name: Install ansible
         run: |
-          python3 -m pip install ansible
+          python -m pip install ansible
 
       - name: Run ansible playbook to create PACKAGES file in VM
         run: |
-          VMIP=$(python3 -c 'from cloudbridge.factory import CloudProviderFactory, ProviderList; prov = CloudProviderFactory().create_provider("openstack", {}); inst = prov.compute.instances.find(label="gha-build-inst-0")[0]; inst.wait_till_ready(); print(inst.public_ips[0])')
+          VMIP=$(python -c 'from cloudbridge.factory import CloudProviderFactory, ProviderList; prov = CloudProviderFactory().create_provider("openstack", {}); inst = prov.compute.instances.find(label="gha-build-inst-0")[0]; inst.wait_till_ready(); print(inst.public_ips[0])')
           sed -i "s@##IP##@$VMIP@g" .github/scripts/ansible/inventory
           sed -i "s@##PEM##@$(realpath ~/packages.pem)@g" .github/scripts/ansible/inventory
           ansible-playbook -v .github/scripts/ansible/ansible-packages.yaml -i .github/scripts/ansible/inventory
@@ -51,4 +51,4 @@ jobs:
           max_attempts: 10
           shell: bash
           command: |
-            python3 .github/scripts/instlaunch.py --delete "$(python3 -c 'from cloudbridge.factory import CloudProviderFactory, ProviderList; prov = CloudProviderFactory().create_provider("openstack", {}); inst = prov.compute.instances.find(label="gha-build-inst-0")[0]; print(inst.id)')"
+            python .github/scripts/instlaunch.py --delete "$(python -c 'from cloudbridge.factory import CloudProviderFactory, ProviderList; prov = CloudProviderFactory().create_provider("openstack", {}); inst = prov.compute.instances.find(label="gha-build-inst-0")[0]; print(inst.id)')"
