--- a/.github/scripts/ansible/ansible-packages.yaml
+++ b/.github/scripts/ansible/ansible-packages.yaml
@@ -2,13 +2,16 @@
 - name: Write R PACKAGES file for binary
   hosts: js2pkgs
   become: yes
+  become_user: ubuntu
   tasks:
   - name: Reboot machine for updates to apply (otherwise will reboot itself)
     ansible.builtin.reboot:
+    become_user: root
 
   - name: Install rclone
     shell: sudo -v ; curl https://rclone.org/install.sh | sudo bash && mkdir -p /tmp/binaries
     ignore_errors: true
+    become_user: root
 
   - name: Add Rclone conf
     copy:
