--- a/.github/scripts/ansible/ansible-packages.yaml
+++ b/.github/scripts/ansible/ansible-packages.yaml
@@ -18,36 +18,30 @@
       src: ~/.rclone.conf
       dest: /home/ubuntu/.rclone.conf
 
-  - name: Copy binaries
+  - name: Split binaries file
     shell: |
       set -x
       cd /home/ubuntu && git clone https://github.com/almahmoud/gha-build || true
       cd gha-build && git pull
-      # Pull all the binaries 
-      # Note: rclone ls 
       mkdir -p /tmp/binaries
       grep -roh "^.*tar.gz$" lists > /tmp/tarlist
       ls /tmp/binaries/ > /tmp/curtars
       comm -2 -3 <(sort /tmp/tarlist) <(sort /tmp/curtars) > /tmp/missingtars
       mkdir -p /tmp/tarpieces
-      split -l 200 /tmp/missingtars /tmp/tarpieces
-      # Run through again and download any missing ones up to 10 times
-      i=0
-      while [ -s /tmp/missingtars ]; do
-        cat /tmp/missingtars | xargs -i -P 20 -n 1 rclone copyto js2:/gha-build/rstudio-binaries/$(cat runstarttime)/{} /tmp/binaries/{} -vvvvv
-        ls /tmp/binaries/ > /tmp/curtars
-        # Everything in first that is not in second
-        comm -2 -3 <(sort /tmp/tarlist) <(sort /tmp/curtars) > /tmp/missingtars
-        # If the counter is greater than 10, break out of the loop
-        i=$((i+1))
-        if [ $i -gt 10 ]; then
-          break
-        fi
-      done
+      split -l 200 /tmp/missingtars /tmp/tarpieces/tars
     args:
       executable: /bin/bash
-    retries: 50
-    delay: 10
+
+  - name: Copy binaries
+    shell: |
+      cd /home/ubuntu/gha-build
+      cat {{ item }} | xargs -i -P 20 -n 1 rclone copyto js2:/gha-build/rstudio-binaries/$(cat runstarttime)/{} /tmp/binaries/{} -vvvvv
+      ls /tmp/binaries/ > /tmp/curtars
+      # Everything in first that is not in second
+      comm -2 -3 <(sort /tmp/tarlist) <(sort /tmp/curtars) > /tmp/missingtars
+    with_fileglob: "/tmp/tarpieces/tars*"
+    args:
+      executable: /bin/bash
 
   - name: Make PACKAGES files
     docker_container:
