--- a/.github/workflows/write_PACKAGES.yaml
+++ b/.github/workflows/write_PACKAGES.yaml
@@ -37,6 +37,25 @@ jobs:
         run: |
           python -m pip install ansible
 
+      - name: Install rclone & add rclone conf file
+        uses: nick-fields/retry@v2
+        env:
+            RCLONE_CONF: ${{secrets.RCLONE_CONF}}
+        with:
+          timeout_minutes: 20
+          max_attempts: 3
+          shell: bash
+          command: |
+            sudo -v ; curl https://rclone.org/install.sh | sudo bash
+            echo "$RCLONE_CONF" > ~/.rclone.conf
+            set -x
+            mkdir -p /tmp/binaries
+            grep -roh "^.*tar.gz$" lists > /tmp/tarlist
+            ls /tmp/binaries/ > /tmp/curtars
+            comm -2 -3 <(sort /tmp/tarlist) <(sort /tmp/curtars) > /tmp/missingtars
+            mkdir -p .github/scripts/ansible/files
+            split -l 200 /tmp/missingtars .github/scripts/ansible/files/tars
+
       - name: Run ansible playbook to create PACKAGES file in VM
         run: |
           VMIP=$(python -c 'from cloudbridge.factory import CloudProviderFactory, ProviderList; prov = CloudProviderFactory().create_provider("openstack", {}); inst = prov.compute.instances.find(label="gha-build-inst-0")[0]; inst.wait_till_ready(); print(inst.public_ips[0])')
