--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -61,7 +61,6 @@ jobs:
           token: ${{ steps.tokenlist.outputs.tok }}
           persist-credentials: true
 
-
       - name: Add write_packages log
         uses: nick-fields/retry@v2
         with:
@@ -269,9 +268,8 @@ jobs:
           PKG="${{ matrix.pkg }}"
           echo "# $PKG Build summary" >> $GITHUB_STEP_SUMMARY
           echo "RStudio package binary: [Jetstream2](https://js2.jetstream-cloud.org:8001/swift/v1/gha-build/rstudio-binaries/$(cat runstarttime)/${{steps.tar.outputs.pkg}})" >> $GITHUB_STEP_SUMMARY
-          echo "Size of package binary: $(cat /tmp/logs/sizes/rstudio-binaries/binaries/$PKG)" >> $GITHUB_STEP_SUMMARY
-          echo "Size of package and dependencies: $(cat /tmp/logs/sizes/rstudio-binaries/libraries/$PKG)" >> $GITHUB_STEP_SUMMARY
-          echo "Build time: \n$(cat /tmp/logs/times/rstudio-binary/$PKG)" >> $GITHUB_STEP_SUMMARY
+          echo "Size of package binary: $(cat /tmp/logs/sizes/rstudio-binaries/binaries/$PKG | awk '{print $1}' | numfmt --to=iec-i --suffix=B --format="%9.2f")" >> $GITHUB_STEP_SUMMARY
+          echo "Size of package library w/ dependencies ([see GitHub artifacts in job summary](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}#artifacts)): $(cat /tmp/logs/sizes/rstudio-binaries/libraries/$PKG | awk '{print $1}' | numfmt --to=iec-i --suffix=B --format="%9.2f")" >> $GITHUB_STEP_SUMMARY
 
       - name: Rclone mark as pushed
         uses: nick-fields/retry@v2
